--- a/app/views/tweets/_tweet_creation.erb
+++ b/app/views/tweets/_tweet_creation.erb
@@ -1,13 +1,13 @@
 <%= form_for @tweet, html: { multipart: true } do |f| %>
 	<div class="row">
-		<div class="col-md-2">
+		<div class="col-xs-2">
 			<% if current_user.image.exists? %>
             	<div id="tweet-creation-box-image-user" style="background-image: url(<%= current_user.image.url(:thumb) %>);"></div>
             <% else %>
             	<%= image_tag("owl.png", id: "tweet-creation-box-image-owl") %>
             <% end %>
 		</div>
-		<div class="col-md-10">
+		<div class="col-xs-10">
 			<%= f.text_area :body, placeholder: "What's going on?", class: 'form-control', id: 'txt-area' %>
 		</div>
 
@@ -18,11 +18,11 @@
 		</div>
 
 		<div class="row" id="tweet-area-options">
-			<div class="col-md-6">
+			<div class="col-xs-6">
 				<span class="glyphicon glyphicon-camera" id="camera"></span>
 				<%= f.file_field :photo, id: 'tweet-creaton-choose-photo-btn' %>
 			</div>
-			<div class="col-md-6">
+			<div class="col-xs-6">
 				<%= f.submit 'Tweet', class: 'btn btn-info', id: 'tweet-btn' %>
 				<div id="counter">140</div>
 			</div>
