--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
 
             <ul class="nav navbar-nav">
               <li class="nav-links"><%= link_to "Home", authenticated_root_path, class: current_page?("/") ? "add-border-to-nav-links-home" : "" %></li>
-              <li class="nav-links"><%= link_to "Notifications", "/path2", class: "add-border-to-nav-links" %></li>
-              <li class="nav-links"><%= link_to "Messages", "/path3", class: "add-border-to-nav-links" %></li>
+              <li class="nav-links"><%= link_to "Notifications", "#", class: "add-border-to-nav-links" %></li>
+              <li class="nav-links"><%= link_to "Messages", "#", class: "add-border-to-nav-links" %></li>
             </ul>
             
             <div id="search-and-suggestion-box-position">
