--- a/app/assets/stylesheets/home_feed.scss
+++ b/app/assets/stylesheets/home_feed.scss
@@ -8,6 +8,10 @@
 	min-height: 100px;
 	width: 585px;
 
+	&:hover {
+		background-color: #f5f8fa;
+	}
+
 	div>h6 {
 		position: relative;
 		right: 30px;
