--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron jumbotron-signin_signout">
-  <%= image_tag("owl.png", id: "nav-bar-image-signin-signout") %>
+  <%= image_tag("owl.png", id: "signup-owl") %>
 </div>
 <div class="container signin_signup">
   <%= bootstrap_devise_error_messages! %>
