--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -37,6 +37,7 @@ $border: solid 3px white;
 #navbar-signin-signout-image {
 	@include images-common-size(120px, 120px);
 	margin-top: -45px;
-	float: right;
-	margin-right: 495px;
+	position: relative;
+    left: 1000px;
+    top: 77px;
 }
