--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,10 @@
         </div>
         <div class="form-group">
           <%= f.label :username %>
-          <%= f.text_field :username, class: "form-control" %>
+          <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">@</span>
+            <input class="form-control" type="text" name="user[username]" id="user_username" aria-describedby="basic-addon1">
+          </div>
         </div>
         <div class="form-group">
           <%= f.label :password %>
